# rust-sugiyama

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust_ci.yml
examples/: from_edges.rs  from_graph.rs
examples/from_edges/: main.rs
examples/from_graph/: main.rs
src/: algorithm.rs  configure.rs  lib.rs  main.rs
src/algorithm/: mod.rs
src/algorithm/p0_cycle_removal/: mod.rs
src/algorithm/p1_layering/: cut_values.rs  low_lim.rs  mod.rs  ranking.rs  tests.rs
src/algorithm/p2_reduce_crossings/: mod.rs  tests.rs
src/algorithm/p3_calculate_coordinates/: mod.rs  tests.rs
src/graphs/: calculate_coordinates.rs  mod.rs  p1_create_layers.rs  p2_reduce_crossings.rs  p3_calculate_coordinates.rs  p3_new.rs
src/graphs/p1_layering/: mod.rs  rank.rs  tests.rs  tight_tree_dfs.rs  traits.rs  tree.rs
src/graphs/p2_reduce_crossings/: tests.rs
src/phases/: mod.rs
src/phases/p1_layering/: cut_values.rs  feasible_tree.rs  low_lim.rs  mod.rs  ranking.rs  tests.rs  tight_tree_dfs.rs
src/phases/p2_reduce_crossings/: mod.rs  tests.rs
src/phases/p3_calculate_coordinates/: mod.rs  tests.rs
src/util/: layers.rs  lookup_maps.rs  mod.rs  traits.rs
