[package]
name = "rust-sugiyama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
petgraph = "0.6.4"
[dev-dependencies]
graph_generator = { git = "https://github.com/paddison/graph_generator.git" }
