[package]
name = "rust-sugiyama"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["paddison"]

description = "Implementation of Sugiyama's algorithm to calculate coordinates of a directed graph"
readme = "README.md"

homepage = "https://github.com/paddison/rust-sugiyama"
repository = "https://github.com/paddison/rust-sugiyama"

keywords = ["graph", "graph-display", "directed-graph"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
petgraph = "0.8.1"

[dev-dependencies]
graph_generator = { git = "https://github.com/paddison/graph_generator.git" }
svg = "0.18.0"
